[gd_scene load_steps=29 format=3 uid="uid://sl4bqqt4oqm8"]

[ext_resource type="PackedScene" uid="uid://i8u1nrww2ycy" path="res://scenes/player_shadow.tscn" id="1_jrgh1"]
[ext_resource type="Script" path="res://scripts/soldierAI.gd" id="1_u1yll"]
[ext_resource type="Texture2D" uid="uid://cl2od37dqfjow" path="res://assets/textures/Guard.png" id="2_8ig2n"]
[ext_resource type="Texture2D" uid="uid://d15xff6yvt7hh" path="res://assets/textures/enemyIcon.png" id="4_akfkr"]
[ext_resource type="Texture2D" uid="uid://cesmoifkb0mbn" path="res://assets/textures/exclamation.png" id="5_jshdy"]
[ext_resource type="PackedScene" uid="uid://bdn5gtomm6rvy" path="res://scenes/fov.tscn" id="6_t4q0x"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wprfi"]
height = 1.4

[sub_resource type="AtlasTexture" id="AtlasTexture_eergt"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 25, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_mc6b8"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ssl4v"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 50, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vivde"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 75, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_bule2"]
atlas = ExtResource("2_8ig2n")
region = Rect2(0, 25, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_12ga3"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 25, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_d4uqs"]
atlas = ExtResource("2_8ig2n")
region = Rect2(34, 25, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_h2c8d"]
atlas = ExtResource("2_8ig2n")
region = Rect2(0, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2ib3"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_y3njd"]
atlas = ExtResource("2_8ig2n")
region = Rect2(34, 0, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_61mpi"]
atlas = ExtResource("2_8ig2n")
region = Rect2(0, 50, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1y2j"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 50, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5jgy"]
atlas = ExtResource("2_8ig2n")
region = Rect2(34, 50, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmjo1"]
atlas = ExtResource("2_8ig2n")
region = Rect2(0, 75, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_k87bg"]
atlas = ExtResource("2_8ig2n")
region = Rect2(17, 75, 16, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltc7m"]
atlas = ExtResource("2_8ig2n")
region = Rect2(34, 75, 16, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_fyw1w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eergt")
}],
"loop": true,
"name": &"IdleBack",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mc6b8")
}],
"loop": true,
"name": &"IdleFront",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ssl4v")
}],
"loop": true,
"name": &"IdleLeft",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vivde")
}],
"loop": true,
"name": &"IdleRight",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bule2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ga3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4uqs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_12ga3")
}],
"loop": true,
"name": &"WalkBack",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h2c8d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ib3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y3njd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2ib3")
}],
"loop": true,
"name": &"WalkFront",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61mpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1y2j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5jgy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1y2j")
}],
"loop": true,
"name": &"WalkLeft",
"speed": 3.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmjo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k87bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltc7m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k87bg")
}],
"loop": true,
"name": &"WalkRight",
"speed": 3.5
}]

[sub_resource type="Animation" id="Animation_4sp1x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sihlf"]
resource_name = "blink"
length = 0.3
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemyIcon:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0m8ks"]
_data = {
"RESET": SubResource("Animation_4sp1x"),
"blink": SubResource("Animation_sihlf")
}

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_wayxv"]
points = PackedVector3Array(-0.000673056, -3.43182, -1.1535, -2.43815, -2.36973, -1.1535, -0.000673056, -2.55716, -1.59109, 2.4368, -2.36973, -1.1535, 0.374841, -0.557265, 4.9708, -0.000673056, -0.682216, 4.9708, -0.375514, -0.557265, 4.9708, -3.4375, 0.0674903, -1.1535, -2.62523, 0.0674903, -1.59109, -1.81296, -1.74498, -1.59109, 1.81229, -1.74498, -1.59109, -0.000673056, -1.2445, -1.96647, 2.62456, 0.0674903, -1.59109, 3.4375, 0.0674903, -1.1535, 0.436754, -0.182412, 4.9708, -0.4381, -0.182412, 4.9708, -0.375514, 0.19312, 4.9708, -2.43815, 2.50539, -1.1535, -1.81296, 1.81816, -1.59109, -1.31295, 0.0674903, -1.96647, -0.875526, -0.807167, -1.96647, 0.874853, -0.807167, -1.96647, 1.31228, 0.0674903, -1.96647, -0.000673056, 0.0674903, -2.09091, 1.81229, 1.81816, -1.59109, 2.4368, 2.50539, -1.1535, 0.374841, 0.19312, 4.9708, -0.000673056, 0.318072, 4.9708, -0.000673056, 3.50568, -1.1535, -0.000673056, 2.63035, -1.59109, -0.000673056, 1.38016, -1.96647, -0.875526, 0.942827, -1.96647, 0.874853, 0.942827, -1.96647)

[node name="Soldier" type="CharacterBody3D"]
collision_layer = 2
collision_mask = 3
script = ExtResource("1_u1yll")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6875, 0)
shape = SubResource("CapsuleShape3D_wprfi")

[node name="Snake_Shadow" parent="." instance=ExtResource("1_jrgh1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.01295, 0)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.341646, 0)
cast_shadow = 0
offset = Vector2(0, 6.5)
pixel_size = 0.0625
billboard = 1
double_sided = false
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_fyw1w")
animation = &"IdleBack"

[node name="EnemyIcon" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.4375, 0)
layers = 2
texture_filter = 0
render_priority = 1
texture = ExtResource("4_akfkr")

[node name="Exclamation" type="Sprite3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 1.875, 0)
visible = false
billboard = 1
texture_filter = 0
texture = ExtResource("5_jshdy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0m8ks")
}
autoplay = "blink"

[node name="FOVCone" parent="." instance=ExtResource("6_t4q0x")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.75, 0)

[node name="DetectArea" type="Area3D" parent="FOVCone"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3125, -0.625)
collision_layer = 2
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="FOVCone/DetectArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.00568187, -4.97159)
shape = SubResource("ConvexPolygonShape3D_wayxv")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="LineOfSight" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.875, 0)
target_position = Vector3(0, 0, -8)
collision_mask = 5
debug_shape_custom_color = Color(1, 0, 0, 1)

[connection signal="area_entered" from="FOVCone/DetectArea" to="." method="_on_detect_area_area_entered"]
[connection signal="area_exited" from="FOVCone/DetectArea" to="." method="_on_detect_area_area_exited"]
